syntax = "proto3";

package auth;

// The login sservice definition
service AuthService {
	rpc Login(LoginRequest) returns (LoginResponse); // sends a login request
}

// The request message containing user creditials

message LoginRequest {
	string username = 1;
	string password = 2;
}

// The response message containing the result of the login operation

message LoginResponse {
	bool success = 1;
	string messsage = 2;
	string token = 3; // JWT
}